# text2image

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh
cmake/: text2imageConfig.cmake.in
examples/cpp/: example.cpp
include/: text2image.h
nodejs/: binding.gyp  index.js  package.json  test.js  text2image_node.cpp
src/: library_context.cpp  skia_render_engine.cpp  task.cpp  text2image.cpp  text2image_internal.h  thread_pool.cpp
